--- a/app/globals.css
+++ b/app/globals.css
@@ -8,26 +8,233 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: white;
+  background: #000;
+  
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+
+@layer components {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
   }
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+
+  .flexCenter {
+    @apply flex justify-center items-center
+  }
+
+  .flexCenterBetween {
+    @apply flex justify-between items-center
+  }
+
+  .transitions-500 {
+    @apply transition-all duration-500 ease-in-out
+  }
+
+  .transitions-300 {
+    @apply transition-all duration-300 ease-in-out
+  }
+
+  .imgSelectNone {
+    @apply pointer-events-none select-none
+  }
+
+  .imgObject {
+    @apply object-cover object-center
+  }
+}
+
+.poster img {
+  z-index: 1;
+}
+
+.poster:hover .detail {
+  z-index: 2;
+}
+.poster:hover .Cardbtn {
+  z-index: 3;
+}
+
+
+
+.videoPopup {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  color: #7f7f7f;
+  opacity: 0;
+  visibility: hidden;
+  z-index: 50;
+}
+
+.videoPopup .opacityLayer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(3.5px);
+  -webkit-backdrop-filter: blur(3.5px);
+  opacity: 0;
+  transition: opacity 400ms;
+}
+
+.videoPopup .videoPlayer {
+  position: relative;
+  width: 800px;
+  aspect-ratio: 16 / 9;
+  background-color: black;
+  transform: scale(0.2);
+  transition: transform 250ms;
+}
+
+.videoPopup .videoPlayer .closeBtn {
+  position: absolute;
+  top: -20px;
+  right: 0;
+  color: white;
+  cursor: pointer;
+}
+
+.videoPopup.visible {
+  opacity: 1;
+  visibility: visible;
+}
+
+.videoPopup.visible .opacityLayer {
+  opacity: 1;
+}
+
+.videoPopup.visible .videoPlayer {
+  transform: scale(1);
+}
+
+
+
+
+
+
+/* Card Details  */
+
+.CardDetailPopup {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  visibility: hidden;
+  z-index: 40;
+}
+
+.CardDetailPopup .opacityLayer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(3.5px);
+  -webkit-backdrop-filter: blur(3.5px);
+  opacity: 0;
+  transition: opacity 400ms;
+}
+
+.CardDetailPopup .detail {
+  position: relative;
+  width: 900px;
+  aspect-ratio: 16 / 9;
+  background-color: black;
+  transform: scale(0.2);
+  transition: transform 250ms;
+}
+
+.CardDetailPopup .detail .closeBtn {
+  position: absolute;
+  top: 0px;
+  right: 0;
+  z-index: 3;
+  color: white;
+  background: #000;
+  padding: 2px;
+  cursor: pointer;
+}
+
+.CardDetailPopup.visible {
+  opacity: 1;
+  visibility: visible;
+}
+
+.CardDetailPopup.visible .opacityLayer {
+  opacity: 1;
+}
+
+.CardDetailPopup.visible .detail {
+  transform: scale(1);
+}
+
+
+/*  */
+
+.playbtn {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  cursor: pointer;
+}
+
+.playbtn svg {
+  width: 80px;
+  color: white;
+}
+
+.playbtn .text {
+  font-size: 20px;
+  transition: all 0.7s ease-in-out;
+}
+
+.playbtn .triangle {
+  stroke-dasharray: 240;
+  stroke-dashoffset: 480;
+  stroke: white;
+  transform: translateY(0);
+  transition: all 0.7s ease-in-out;
+}
+
+.playbtn .circle {
+  stroke: white;
+  stroke-dasharray: 650;
+  stroke-dashoffset: 1300;
+  transition: all 0.5s ease-in-out;
+}
+
+.playbtn:hover .text {
+  color: red;
+}
+
+.playbtn:hover .triangle {
+  stroke-dashoffset: 0;
+  opacity: 1;
+  stroke: red;
+  animation: trailorPlay 0.7s ease-in-out;
+}
+
+.playbtn:hover .circle {
+  stroke-dashoffset: 0;
+  stroke: red;
 }
